--- a/index.html
+++ b/index.html
@@ -64,7 +64,16 @@
     <body>
         <h1>Curso Completo de JavaScript</h1>
         <p>Primer Script en JS</p>
-        <div id="mi caja">Hola soy una Caja</div>
+
+        <section id="miseccion">
+            <h1>Listado de Textos de los DIVS</h1>
+        </section>
+
+        <div id="micaja">Hola soy una Caja</div>
+
+        <div>Soy el Primer DIV</div>
+        <div>Soy el Segundo DIV</div>
+        <div>Soy el Tercero DIV</div>
    
         <!--Aca se puede cargar los Scripts-->
         <script type="text/javascript" src="js/28_dom.js"></script>
