--- a/index.html
+++ b/index.html
@@ -66,14 +66,14 @@
         <p>Primer Script en JS</p>
 
         <section id="miseccion">
-            <h1>Listado de Textos de los DIVS</h1>
+            <h1 id="encabezado">Listado de Textos de los DIVS</h1>
         </section>
 
         <div id="micaja">Hola soy una Caja</div>
 
-        <div>Soy el Primer DIV</div>
-        <div>Soy el Segundo DIV</div>
-        <div>Soy el Tercero DIV</div>
+        <div class="amarillo">Soy el Primer DIV</div>
+        <div class="rojo">Soy el Segundo DIV</div>
+        <div class="rojo">Soy el Tercero DIV</div>
    
         <!--Aca se puede cargar los Scripts-->
         <script type="text/javascript" src="js/28_dom.js"></script>
