--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
            <script type="text/javascript" src="js/26_arrays-mult.js"></script>
            <script type="text/javascript" src="js/25_arrayas.js"></script>
            <script type="text/javascript" src="js/27_ejerciciosarrays.js"></script>
+           <script type="text/javascript" src="js/28_dom.js"></script>
 
 
 
@@ -76,7 +77,8 @@
         <div class="rojo">Soy el Tercero DIV</div>
    
         <!--Aca se puede cargar los Scripts-->
-        <script type="text/javascript" src="js/28_dom.js"></script>
+        
+        <script type="text/javascript" src="js/29_bom.js"></script>
    
     </body>
 </html>
