--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
            <script type="text/javascript" src="js/25_arrayas.js"></script>
            <script type="text/javascript" src="js/27_ejerciciosarrays.js"></script>
            <script type="text/javascript" src="js/28_dom.js"></script>
+           <script type="text/javascript" src="js/29_bom.js"></script>
 
 
 
@@ -64,13 +65,16 @@
     </head>
     <body>
         <h1>Curso Completo de JavaScript</h1>
-        <p>Primer Script en JS</p>
+
+        <p>
+        <button id="boton">Preciona</button>   
+        </p>   
+        <div id="micaja">Hola soy una Caja</div>
+        <hr/>
 
         <section id="miseccion">
             <h1 id="encabezado">Listado de Textos de los DIVS</h1>
         </section>
-
-        <div id="micaja">Hola soy una Caja</div>
 
         <div class="amarillo">Soy el Primer DIV</div>
         <div class="rojo">Soy el Segundo DIV</div>
@@ -78,7 +82,8 @@
    
         <!--Aca se puede cargar los Scripts-->
         
-        <script type="text/javascript" src="js/29_bom.js"></script>
+        
+        <script type="text/javascript" src="js/30_eventos.js"></script>
    
     </body>
 </html>
