--- a/index.html
+++ b/index.html
@@ -68,7 +68,12 @@
 
         <p>
         <button id="boton">Preciona</button>   
-        </p>   
+        
+        <form>
+            <input type="text" name="nombre" id="campo_nombre" />
+        </form>
+        </p>
+        
         <div id="micaja">Hola soy una Caja</div>
         <hr/>
 
