--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="es">
     <head>
         <meta charset="utf-8" />
-        <title>Hola Mundo :D  </title>
+        <title>Hola de Nuevo :D </title>
 
         <!--
         <script type="text/javascript">
