--- a/formulario.html
+++ b/formulario.html
@@ -3,6 +3,8 @@
     <head>
         <meta charset="UTF-8"/>
         <title>Ejercio DOM, Eventos y Funciones</title>
+
+        <script type="text/javascript" src="js/32_ejercicio_dom.js"></script>
     </head>
     <body>
         <!--
