--- a/formulario.html
+++ b/formulario.html
@@ -24,8 +24,7 @@
             1. Formulario campos: Nombres, Apellidos y edad
             2.Boton de enviar el formulario: eventos submit
             3. Mostrar datos en pantalla
-            4. Tenes un boton que al darle click nos muestra
-            los datos actuales del formulario
+            4. Validacion de formulario
         -->
 
 
