--- a/formulario.html
+++ b/formulario.html
@@ -35,6 +35,7 @@
             <form action="#" method="POST" id="formulario" onsubmit="return false;">
                 <label for="nombre">Nombre</label> <br/>
                 <input type="text" name="nombre" id="nombre" /> <br/>
+                <span id="error_nombre"></span>
                 
                 <label for="apellidos">Apellidos</label> <br/>
                 <input type="text" name="apellidos" id="apellidos" /> <br/>
