--- a/datos_externos.html
+++ b/datos_externos.html
@@ -8,7 +8,11 @@
         <h1>Listado de Usuarios</h1>
         <div id="usuarios">
             <span class="loading">Cargando ... </span>
+            <hr>
+        </div>
 
+        <div id="Miguel">   
+            <span class="loading">Cargando ... </span>
         </div>
 
         <script type="text/javascript" src="js/36_fetch.js"></script>
