--- a/datos_externos.html
+++ b/datos_externos.html
@@ -7,12 +7,17 @@
    <body>
         <h1>Listado de Usuarios</h1>
         <div id="usuarios">
-            <span class="loading">Cargando ... </span>
-            <hr>
+            <span class="loading">Cargando datos ususario... </span>
+           
         </div>
+        <hr>
+        <div id="profesor">   
+            <span class="loading">Cargando Profesor... </span>
+        </div>
+        <hr>
 
         <div id="Miguel">   
-            <span class="loading">Cargando ... </span>
+            <span class="loading">Cargando Usuario... </span>
         </div>
 
         <script type="text/javascript" src="js/36_fetch.js"></script>
