--- a/datos_externos.html
+++ b/datos_externos.html
@@ -22,6 +22,7 @@
 
         <script type="text/javascript" src="js/36_fetch.js"></script>
         <script type="text/javascript" src="js/37_try_catch.js"></script>
+        <script type="text/javascript" src="js/38_fechas.js"></script>
 
    </body>
 </html>
