--- a/aprendiendo_jquery/index.html
+++ b/aprendiendo_jquery/index.html
@@ -12,22 +12,25 @@
             src="https://code.jquery.com/jquery-3.7.1.min.js"
             integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo="
             crossorigin="anonymous"></script>
-        -->
-        
-        <!--Forma #2-->
-        <script type="text/javascript" src="js/jquery-3.7.1.min.js"></script>
 
-
-
-        <!--Llamado de verificacion-->
-            <script>
+             Llamado de verificacion
+             <script>
                 $(document).ready(function(){
                     console.log("jquery y la web cargando");
                 });
             </script>
+        -->
+        
+        <!--Forma #2-->
+        <script type="text/javascript" src="js/jquery-3.7.1.min.js"></script>
+        <script type="text/javascript" src="js/01_selectores.js"></script>
+
     </head>
     <body>
         <h1>Aprendiendo jQuery Adelso Hernandez WEB</h1>
-        <p>Ejericicios de jQuery</p>
+        <p id="rojo">Ejericicios de jQuery</p>
+        <p id="amarillo">Practicando con Selectores</p>
+        <p id="verde">Quiero ser un parrafo ver</p>
+
     </body>
 </html>
