--- a/aprendiendo_jquery/index.html
+++ b/aprendiendo_jquery/index.html
@@ -25,12 +25,19 @@
         <script type="text/javascript" src="js/jquery-3.7.1.min.js"></script>
         <script type="text/javascript" src="js/01_selectores.js"></script>
 
+        <style>
+            .zebra{
+                border: 5px dashed black;
+            }
+        </style>
+
     </head>
     <body>
         <h1>Aprendiendo jQuery Adelso Hernandez WEB</h1>
-        <p id="rojo">Ejericicios de jQuery</p>
-        <p id="amarillo">Practicando con Selectores</p>
-        <p id="verde">Quiero ser un parrafo ver</p>
+        <p id="rojo" class="sin_borde">Ejericicios de jQuery</p>
+        <p id="amarillo" class="zebra">Practicando con Selectores</p>
+        <p id="verde" class="sin_borde">Quiero ser un parrafo ver</p>
+        <p class="zebra">Soy un Parrafo Blanco</p>
 
     </body>
 </html>
