--- a/aprendiendo_jquery/index.html
+++ b/aprendiendo_jquery/index.html
@@ -38,6 +38,12 @@
     </head>
     <body>
         <h1>Aprendiendo jQuery Adelso Hernandez WEB</h1>
+        <ul>
+
+            <li><a href="https://www.google.com" title="Google">Ir a Google</a></li>
+            <li><a href="https://www.facebook.com" title="Facebook">Ir a Facebook</a></li>
+        </ul>
+
         <p id="rojo" class="sin_borde">Ejericicios de jQuery</p>
         <p id="amarillo" class="zebra">Practicando con Selectores</p>
         <p id="verde" class="sin_borde">Quiero ser un parrafo ver</p>
