--- a/aprendiendo_jquery/index.html
+++ b/aprendiendo_jquery/index.html
@@ -33,6 +33,17 @@
             .grande{
                 font-size: 30px;
             }
+
+            .margen-superior{
+                display: block;
+                margin-top: 45px;
+                
+            }
+
+            .resaltado{
+                border-bottom: 2px solid green;
+            }
+                        
         </style>
 
     </head>
@@ -48,6 +59,15 @@
         <p id="amarillo" class="zebra">Practicando con Selectores</p>
         <p id="verde" class="sin_borde">Quiero ser un parrafo ver</p>
         <p class="zebra">Soy un Parrafo Blanco</p>
+
+        <div id="caja">
+            <p>Hola Soy una Caja</p>
+            <ul>
+                <li>Elemento 1</li>
+                <li id="elemento2">Elemento 2</li>
+            </ul>
+            <span class="resaltado">Soy un Span</span>
+        </div>
 
     </body>
 </html>
