--- a/aprendiendo_jquery/eventos.html
+++ b/aprendiendo_jquery/eventos.html
@@ -24,12 +24,33 @@
             }
                */ 
 
+            input{
+                padding: 10px;
+                width: 300px;
+                font-size: 20px;
+            }
+
+            #datos{
+                border: 4px dashed black;
+                padding: 10px;
+                width: 250px;
+                height: 50px;
+                margin-top: 10px;
+                display: none;
+            }
+
         </style>
        
     </head>
     <body>
         <h1>Aprendiendo jQuery Adelso Hernandez WEB -- Eventos</h1>
    
+        <form>
+            <input type="text" id="nombre" />
+        </form>
+        <div id="datos"></div>
+        <br/>
+
         <div id="caja">
             Soy Una Caja
         </i></div>
