--- a/aprendiendo_jquery/eventos.html
+++ b/aprendiendo_jquery/eventos.html
@@ -38,6 +38,18 @@
                 margin-top: 10px;
                 display: none;
             }
+            
+            #sigueme{
+                width: 25px;
+                height: 25px;
+                position: absolute;
+                display: block;
+                background: yellow;
+                opacity: 0.5;
+                border: 3px solid black;
+                border-radius: 999px;
+
+            }
 
         </style>
        
@@ -45,6 +57,8 @@
     <body>
         <h1>Aprendiendo jQuery Adelso Hernandez WEB -- Eventos</h1>
    
+        <div id="sigueme"></div>
+
         <form>
             <input type="text" id="nombre" />
         </form>
