--- a/aprendiendo_jquery/efectos.html
+++ b/aprendiendo_jquery/efectos.html
@@ -37,6 +37,11 @@
             Abrir
         </button>
 
+        <button id="animame">
+            Animame!!
+        </button>
+
+
         <div id="caja">
             Master en JavaScript
             </div>
