--- a/aprendiendo_jquery/interface.html
+++ b/aprendiendo_jquery/interface.html
@@ -5,6 +5,11 @@
         <title>Aprendiendo jQuery</title>
       
         <script type="text/javascript" src="js/jquery-3.7.1.min.js"></script>
+        
+        <link rel="stylesheet" href="js/jquery-ui/jquery-ui.min.css"/>
+        <link rel="stylesheet" href="js/jquery-ui/jquery-ui.structure.min.css"/>
+        <link rel="stylesheet" href="js/jquery-ui/jquery-ui.theme.min.css"/>
+
         <script type="text/javascript" src="js/jquery-ui/jquery-ui.min.js"></script>        
         <script type="text/javascript" src="js/06_interface.js"></script>
         <style>
