--- a/aprendiendo_jquery/interface.html
+++ b/aprendiendo_jquery/interface.html
@@ -21,12 +21,31 @@
                     margin: 20px;
                     float: left;
                 }
+                .lista_seleccionable li{
+                    width: 80%;
+                    padding: 20px;
+                    border: 1px solid #ccc;
+                    list-style: none;
+                    cursor: pointer;
+
+                }
+
+                ul .ui-selecting {background: green;}
+                ul .ui-selected {background: blue;}
 
         </style>
         
     </head>
     <body>
         <h1>Aprendiendo jQuery -- UI</h1>
+
+        <ul class="lista_seleccionable">
+            <li>GTA 5</li>
+            <li>Need For Speed</li>
+            <li>FC25</li>
+            <li>DLS2025</li>
+            <li>Super Mario</li>
+        </ul>
         
         <div class="elemento">
             Hola Soy un elemento de la WEB 1
