--- a/aprendiendo_jquery/interface.html
+++ b/aprendiendo_jquery/interface.html
@@ -58,7 +58,14 @@
     </head>
     <body>
         <h1>Aprendiendo jQuery -- UI</h1>
+        <hr/>
 
+        <h3>Tooltip</h3>
+        <a href="#" title="Acceder a la seccion de mis datos de esta web">Mis datos</a>
+        <a href="#" title="Logueate en esta web">Identificarse</a>
+        <a href="#" title="Ver todos mis amigos">Amigos</a>
+
+        <hr/>
         <button id="mostrar">Mostrar</button>
 
         <div class="caja_efectos elemento"></div>
