--- a/aprendiendo_jquery/interface.html
+++ b/aprendiendo_jquery/interface.html
@@ -66,6 +66,21 @@
         <a href="#" title="Ver todos mis amigos">Amigos</a>
 
         <hr/>
+
+        <hr/>
+
+        <h3>Cuadros de Dialogo</h3>
+        <button id="lanzar_popup">Lanzame</button>
+        <div id="popup" title="¿Etas seguro?" style=display:none"">
+            <p>
+                Si continuas practicando mejoraras mucho 
+            </p>
+        </div>
+
+
+        <hr/>
+
+
         <button id="mostrar">Mostrar</button>
 
         <div class="caja_efectos elemento"></div>
