--- a/aprendiendo_jquery/interface.html
+++ b/aprendiendo_jquery/interface.html
@@ -67,8 +67,6 @@
 
         <hr/>
 
-        <hr/>
-
         <h3>Cuadros de Dialogo</h3>
         <button id="lanzar_popup">Lanzame</button>
         <div id="popup" title="¿Etas seguro?" style=display:none"">
@@ -77,6 +75,10 @@
             </p>
         </div>
 
+        <hr/>
+
+        <h3>Calendario</h3>
+        <input type="text" id="calendario" />
 
         <hr/>
 
