--- a/aprendiendo_jquery/interface.html
+++ b/aprendiendo_jquery/interface.html
@@ -83,6 +83,29 @@
         <hr/>
 
 
+        <h3>Pestañas</h3>
+        <div id="pestanas">
+                <ul>
+                    <li><a href="#tabs_1">Pestaña 1</a></li>
+                    <li><a href="#tabs_2">Pestaña 2</a></li>
+                    <li><a href="#tabs_3">Pestaña 3</a></li>
+                </ul>
+                <div id="tabs_1">
+                    Hola soy la Primera pestaña
+                </div>
+                <div id="tabs_2">
+                    Hola soy la Segunda pestaña
+                </div>
+                <div id="tabs_3">
+                    Hola soy la Tercera pestaña
+                </div>
+
+        </div>
+
+        <hr/>
+        
+
+
         <button id="mostrar">Mostrar</button>
 
         <div class="caja_efectos elemento"></div>
