--- a/proyecto-js/index.html
+++ b/proyecto-js/index.html
@@ -14,8 +14,10 @@
                 <!--Cabecera o parte superior-->
             <header>
                 <div id="logo">
-                    Proyecto JS
+                    <h1>Proyecto JS</h1>
                 </div>
+
+                <div class="clearfix"></div>
                 <navbar>
                     <ul id="menu">
                         <li><a href="#">Inicio</a></li>
