--- a/proyecto-js/index.html
+++ b/proyecto-js/index.html
@@ -18,14 +18,14 @@
                 </div>
 
                 <div class="clearfix"></div>
-                <navbar>
-                    <ul id="menu">
+                <nav id="menu">
+                    <ul>
                         <li><a href="#">Inicio</a></li>
                         <li><a href="#">Reloj</a></li>
                         <li><a href="#">Sobre Mi</a></li>
                         <li><a href="#">Contacto</a></li>
                     </ul>
-                </navbar>
+                </nav>
             </header>  
             
             <!--Slider-->
