--- a/proyecto-js/index.html
+++ b/proyecto-js/index.html
@@ -77,9 +77,17 @@
                     </article>
 
                 </div>
-                <sidebar id="sidebar">
+                <aside id="sidebar">
+                    <div id="about">
+                        <h4>¿Quien soy?</h4>
+                        <img src="img/caracol.jpg" />
+                        <p>lacinia risus. Suspendisse potenti. Etiam suscipit 
+                            placerat tellus, a egestas enim eleifend vel. Sed 
+                            varius tellus non ex laoreet tempor.
+                        </p>
+                    </div>
 
-                </sidebar>
+                </aside>
 
                 <div class="clearfix"></div>
 
