--- a/proyecto-js/index.html
+++ b/proyecto-js/index.html
@@ -79,13 +79,34 @@
                 </div>
                 <aside id="sidebar">
                     <div id="about">
-                        <h4>¿Quien soy?</h4>
+                        <h4><span>¿Quien soy?</span></h4>
                         <img src="img/caracol.jpg" />
                         <p>lacinia risus. Suspendisse potenti. Etiam suscipit 
                             placerat tellus, a egestas enim eleifend vel. Sed 
                             varius tellus non ex laoreet tempor.
                         </p>
                     </div>
+
+                    <div id="login"></div>
+                         <h4><span>Identificate</span></h4>
+                         <form>
+                            <label for="name">
+                                Nombre
+                            </label>
+                            <input type="text" name="name" />
+
+                            <label for="email">
+                                Correo
+                            </label>
+                            <input type="text" name="email" />
+                        
+                            <label for="password">
+                                Contraseña
+                            </label>
+                            <input type="password" name="password" />
+
+                            <input type="submit" value="Entrar" />
+                         </form>
 
                 </aside>
 
