--- a/proyecto-js/index.html
+++ b/proyecto-js/index.html
@@ -80,7 +80,7 @@
                 <aside id="sidebar">
                     <div id="about">
                         <h4><span>¿Quien soy?</span></h4>
-                        <img src="img/caracol.jpg" />
+                        <img src="img/1.jpg" />
                         <p>lacinia risus. Suspendisse potenti. Etiam suscipit 
                             placerat tellus, a egestas enim eleifend vel. Sed 
                             varius tellus non ex laoreet tempor.
