--- a/proyecto-js/index.html
+++ b/proyecto-js/index.html
@@ -87,7 +87,7 @@
                         </p>
                     </div>
 
-                    <div id="login"></div>
+                    <div id="login">
                          <h4><span>Identificate</span></h4>
                          <form>
                             <label for="name">
@@ -107,6 +107,7 @@
 
                             <input type="submit" value="Entrar" />
                          </form>
+                    </div>
 
                 </aside>
 
