--- a/proyecto-js/index.html
+++ b/proyecto-js/index.html
@@ -117,7 +117,7 @@
        </section>
 
        <footer>
-         Master en JavaScript -- Adelso Hernandez
+         Master en JavaScript -- Adelso Hernandez &copy;
        </footer>
 
     </body>
