--- a/proyecto-js/index.html
+++ b/proyecto-js/index.html
@@ -6,7 +6,17 @@
 
             <!--Estilos CSS-->
             <link rel="stylesheet" type="text/css" href="css/styles.css" />
-        </head>
+      
+            <!--jQuery-->
+            <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+
+            <!--Slider-->
+            <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bxslider@4.2.17/dist/jquery.bxslider.min.css">
+            <script src="https://cdn.jsdelivr.net/npm/bxslider@4.2.17/dist/jquery.bxslider.min.js"></script>
+
+         </head>
+            <!--Mis Scripts-->
+            <script type="text/javascript" src="js/main.js"></script> 
 
         <body>
             <section id="global">
@@ -30,6 +40,11 @@
             
             <!--Slider-->
             <div id="slider">
+                <div class="bxslider">
+                    <div><img src="img/4.jpg" title="Hojas" /></div>
+                    <div><img src="img/3.jpeg" title="Rojo" /></div>
+                    <div><img src="img/2.jpg" title="Cielo" /></div>
+                  </div>
 
             </div>
 
