--- a/proyecto-js/index.html
+++ b/proyecto-js/index.html
@@ -40,7 +40,7 @@
             
             <!--Slider-->
             <div id="slider">
-                <div class="bxslider">
+                <div class="galeria">
                     <div><img src="img/4.jpg" title="Hojas" /></div>
                     <div><img src="img/3.jpeg" title="Rojo" /></div>
                     <div><img src="img/2.jpg" title="Cielo" /></div>
