--- a/proyecto-js/index.html
+++ b/proyecto-js/index.html
@@ -6,6 +6,7 @@
 
             <!--Estilos CSS-->
             <link rel="stylesheet" type="text/css" href="css/styles.css" />
+            <link id="theme" rel="stylesheet" type="text/css" href="css/blue.css" />
       
             <!--jQuery-->
             <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
@@ -24,6 +25,12 @@
         
         </head>    
         <body>
+            <div id="selector_theme">
+                <div id="to-blue"></div>
+                <div id="to-red"></div>
+                <div id="to-purple"></div>
+            </div>
+
             <section id="global">
 
                 <!--Cabecera o parte superior-->
@@ -46,9 +53,9 @@
             <!--Slider-->
             <div id="slider">
                 <div class="galeria">
-                    <div><img src="img/4.jpg" title="Hojas" /></div>
-                    <div><img src="img/3.jpeg" title="Rojo" /></div>
-                    <div><img src="img/2.jpg" title="Cielo" /></div>
+                    <div ><img src="img/2.jpg" title="Cielo" /></div>
+                    <div ><img src="img/3.jpeg" title="Rojo" /></div>
+                    <div ><img src="img/4.jpg" title="Hojas" /></div>
                   </div>
 
             </div>
