--- a/proyecto-js/index.html
+++ b/proyecto-js/index.html
@@ -26,9 +26,9 @@
         </head>    
         <body>
             <div id="selector_theme">
-                <div id="to-blue"></div>
-                <div id="to-red"></div>
-                <div id="to-purple"></div>
+                <div id="to-blue"><img src="img/6.png" title="blue" /></div>
+                <div id="to-red"><img src="img/5.png" title="rojo" /></div>
+                <div id="to-purple"><img src="img/7.png" title="morado" /></div>
             </div>
 
             <section id="global">
