--- a/proyecto-js/reloj.html
+++ b/proyecto-js/reloj.html
@@ -11,11 +11,10 @@
             <!--jQuery-->
             <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
            
-            <link rel="stylesheet" href="js/jquery-ui/jquery-ui.min.css"/>
-            <link rel="stylesheet" href="js/jquery-ui/jquery-ui.structure.min.css"/>
-            <link rel="stylesheet" href="js/jquery-ui/jquery-ui.theme.min.css"/>
-    
-            <script type="text/javascript" src="js/jquery-ui/jquery-ui.min.js"></script>
+            <!--Moment js-->
+            <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.30.1/moment.min.js"></script>
+            <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.30.1/locale/es.min.js"></script>
+
 
             <!--Mis Scripts-->
             <script type="text/javascript" src="js/main.js"></script> 
@@ -51,7 +50,10 @@
             <section id="content">
 
                 <div id="box">
-                    <!-- Cargar Acordeon -->
+                    <!-- Cargar Relo j-->
+                     <div id="reloj"></div>
+
+
 
                             </div>
                      </div>
