--- a/proyecto-js/reloj.html
+++ b/proyecto-js/reloj.html
@@ -39,7 +39,7 @@
                 <nav id="menu">
                     <ul>
                         <li><a href="index.html">Inicio</a></li>
-                        <li><a href="#">Reloj</a></li>
+                        <li><a href="reloj.html">Reloj</a></li>
                         <li><a href="about.html">Sobre Mi</a></li>
                         <li><a href="#">Contacto</a></li>
                     </ul>
