--- a/proyecto-js/index.html
+++ b/proyecto-js/index.html
@@ -19,6 +19,11 @@
             <!--Moment js-->
             <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.30.1/moment.min.js"></script>
             <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.30.1/locale/es.min.js"></script>
+
+            <!-- Plugin validacion -->
+            <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-form-validator/2.3.26/jquery.form-validator.min.js"></script>
+
+
          
             <!--Mis Scripts-->
             <script type="text/javascript" src="js/main.js"></script> 
