--- a/proyecto-js/contacto.html
+++ b/proyecto-js/contacto.html
@@ -17,6 +17,9 @@
     
             <script type="text/javascript" src="js/jquery-ui/jquery-ui.min.js"></script>
 
+            <!--Plugin Validacion-->
+            <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-form-validator/2.1.47/jquery.form-validator.min.js"></script>
+
             <!--Mis Scripts-->
             <script type="text/javascript" src="js/main.js"></script> 
         
@@ -76,7 +79,7 @@
                         <label for="years">Edad</label>
                         <input type="number" name="years" />
 
-                        <input type="submit" value="enviar" />
+                        <input type="submit" value="Enviar" />
 
                     </form>
 
