--- a/poo-y-typescript/index.html
+++ b/poo-y-typescript/index.html
@@ -4,7 +4,10 @@
         <meta charset="utf-8"/>
 
         <!--Scripts de carga-->
-        <script src="js/01_clase_json.js"></script>
+        <!--<script src="js/01_clase_json.js"></script>-->
+        <script src="js/02_holamundo.js"></script>
+
+
         
     </head>
 
