--- a/poo-y-typescript/index.html
+++ b/poo-y-typescript/index.html
@@ -5,7 +5,7 @@
 
         <!--Scripts de carga-->
         <!--<script src="js/01_clase_json.js"></script>-->
-        <script src="js/02_holamundo.js"></script>
+        <script src="js/03_tipos_de_datos.js"></script>
 
 
         
