--- a/PruebasAngular8/src/index.html
+++ b/PruebasAngular8/src/index.html
@@ -1,8 +1,8 @@
 <!doctype html>
-<html lang="en">
+<html lang="es">
 <head>
   <meta charset="utf-8">
-  <title>PruebasAngular8</title>
+  <title class="hola">Hola desde Angular 8</title>
   <base href="/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
