--- a/curso-sokets/client/index.html
+++ b/curso-sokets/client/index.html
@@ -10,5 +10,7 @@
     </head>
     <body>
         <h1>Chat con Socket.io y NodeJS</h1>
+        <div id="messages"></div>
+        
     </body>
 </html>
