--- a/ext-cursojs/index.html
+++ b/ext-cursojs/index.html
@@ -7,6 +7,11 @@
 <body>
   <h1>Abre la consola para ver el resultado</h1>
 
-  <script src="carro.js"></script>
+
+  <!--Importacion de scripts-->
+ <!-- <script src="carro.js"></script>  -->
+
+  <script src="programa.js"></script>
+
 </body>
 </html>
